# enterprise-sso-system

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.deploy  LICENSE  NOTICE  README.md  SECURITY.md  SUPPLY_CHAIN.md  deny.toml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
account-linking/: Cargo.toml
account-linking/src/: lib.rs
account-linking/tests/: link.rs
admin/: Cargo.toml
admin/src/: challenge.rs  google_oauth.rs  lib.rs  main.rs  routes.rs
admin/tests/: admin_routes_test.rs
audit/: Cargo.toml  build.rs
audit/src/: bft.rs  blockchain.rs  lib.rs  log.rs  main.rs  throttle.rs
audit/tests/: audit_test.rs  bft_byzantine_test.rs  bft_test.rs  concurrent_append_test.rs  proptest_bft.rs  wal_corruption_test.rs
authsrv/: Cargo.toml
authsrv/src/: lib.rs  main.rs
authsrv/tests/: _legacy_flow.rs.disabled  anon_subject_rejected.rs  audit_journey.rs  cross_client_rejected.rs  end_session_open_redirect_closed.rs  flow.rs  getrandom_fault_propagates.rs  introspect_oracle_closed.rs  no_plaintext_bind.rs  no_test_util_in_release.rs  oversized_pkce_rejected.rs  refresh_requires_client_authn.rs  revoke_requires_client_authn.rs  security_headers_present.rs  state_crlf_rejected.rs
common/: Cargo.toml
common/examples/: kek_ceremony.rs  node_identity_seal.rs  reindex_blind_index.rs  seal_kek_ceremony.rs
common/src/: actions.rs  anti_entropy.rs  atomic_broadcast.rs  audit_bridge.rs  auto_heal.rs  auto_response.rs  backup.rs  binary_attestation_mesh.rs  bmc_hardening.rs  bootstrap_ceremony.rs  build_manifest.rs  bulkhead.rs  cac.rs  cac_auth.rs  cae.rs  cert_lifecycle.rs  circuit_breaker.rs  classification.rs  cluster.rs  cluster_roles.rs  cmmc.rs  cnsa2.rs  code_healing.rs  common_criteria.rs  compliance.rs  conditional_access.rs  config.rs  consistent_hash.rs  crdt.rs  cross_domain.rs  ct_floor.rs  data_residency.rs  db.rs  db_ha.rs  db_pool.rs  deadline.rs  delegated_admin.rs  device_lifecycle.rs  distributed_ca.rs  distributed_kms.rs  (+82 more)
common/tests/: actions_test.rs  cat_g_adversarial_test.rs  circuit_breaker_test.rs  classification_test.rs  compliance_snapshot_test.rs  config_test.rs  cross_domain_blp_test.rs  cross_domain_test.rs  ct_gf256_test.rs  db_ha_test.rs  deny_unknown_check.rs  distributed_ceremony_test.rs  duress_saturation_regression.rs  duress_test.rs  edge_cases.rs  encrypted_pool_mlock.rs  entropy_panic_test.rs  health_test.rs  ignore_allowlist.toml  incident_response_test.rs  integer_overflow_test.rs  key_rotation_test.rs  log_pseudonym_test.rs  network_test.rs  no_secret_hashmap_lint.rs  ocsp_adversarial_test.rs  persistence_test.rs  poisoned_share_rejected.rs  production_mode_test.rs  proptest_classification.rs  proptest_threshold.rs  raft_propose_test.rs  retry_test.rs  revocation_flooding_test.rs  revocation_test.rs  runtime_defense_adversarial_test.rs  runtime_defense_test.rs  sealed_keys_test.rs  shared_keys_test.rs  sync_test.rs  (+4 more)
crypto/: Cargo.toml  build.rs
crypto/benches/: crypto_bench.rs
crypto/src/: adaptive.rs  attest.rs  cac.rs  ct.rs  did.rs  dpop.rs  drbg.rs  enclave.rs  entropy.rs  envelope.rs  fips_kat.rs  hbs.rs  he_search.rs  honey.rs  hsm.rs  jwe.rs  kdf.rs  lib.rs  memguard.rs  pedersen_dkg.rs  pq_sign.rs  process_harden.rs  receipts.rs  seal.rs  seccomp.rs  slh_dsa.rs  symmetric.rs  threshold.rs  tpm.rs  verifiable_credentials.rs  vrf.rs  xwing.rs  zkp.rs
crypto/tests/: cross_impl_validation_test.rs  ct_test.rs  dpop_test.rs  drbg_test.rs  dudect_timing_test.rs  enclave_xwing_test.rs  entropy_test.rs  guarded_key_mlock.rs  memguard_hardened_test.rs  mlock_address_stable.rs  nist_kat_vectors_test.rs  nist_vectors_test.rs  pedersen_dkg_test.rs  pq_agility_test.rs  pq_hardened_test.rs  pq_kat_test.rs  pq_vrf_test.rs  proptest_crypto.rs  proptest_frost_dkg.rs  receipt_test.rs  security_properties_test.rs  threshold_test.rs  timing_oracle_test.rs  xwing_test.rs  zeroize_test.rs
dudect-harness/: Cargo.toml
dudect-harness/src/: lib.rs
dudect-harness/tests/: welch.rs
e2e/: Cargo.toml
e2e/src/: chaos.rs  lib.rs
e2e/tests/: advanced_attack_simulation_test.rs  adversarial_edge_cases_test.rs  attack_simulation_test.rs  byzantine_equivocation_test.rs  chaos_auth.rs  chaos_byzantine.rs  chaos_clock.rs  chaos_compliance.rs  chaos_crypto.rs  chaos_pq.rs  chaos_resilience_test.rs  chaos_resource.rs  chaos_test.rs  compliance_dataflow_hardened_test.rs  credential_attack_hardened_test.rs  crypto_token_hardened_test.rs  disaster_recovery_test.rs  distributed_hardening_test.rs  distributed_persistence_test.rs  encryption_coverage_test.rs  enterprise_compliance_hardened_test.rs  error_path_hardened_test.rs  full_login_flow_test.rs  host_compromise_extended_test.rs  host_compromise_hardened_test.rs  http_smuggling_test.rs  infrastructure_hardened_test.rs  infrastructure_misconfiguration_test.rs  inter_process_test.rs  key_rotation_concurrent_test.rs  key_rotation_race_test.rs  login_benchmark_test.rs  multi_portal_audience_test.rs  multi_tenant_isolation_test.rs  nation_state_attack_test.rs  network_exposure_hardened_test.rs  network_partition_hardened_test.rs  network_partition_test.rs  pentagon_hardening_test.rs  pq_crypto_hardened_test.rs  (+14 more)
fido/: Cargo.toml
fido/src/: authentication.rs  lib.rs  mds3.rs  policy.rs  registration.rs  tpm_attestation.rs  types.rs  verification.rs
fuzz/: Cargo.toml
gateway/: Cargo.toml
gateway/src/: lib.rs  (+7 more)
jit-access/: Cargo.toml
kerberos-pkinit/: Cargo.toml
kt/: Cargo.toml  build.rs
ldap-connector/: Cargo.toml
mdm-compliance/: Cargo.toml
mfa-sms-push/: Cargo.toml
milnet-crypto/: Cargo.toml
milnet-e2e/: Cargo.toml
milnet-gateway/: Cargo.toml
milnet-kt/: Cargo.toml
milnet-opaque/: Cargo.toml
milnet-orchestrator/: Cargo.toml
milnet-ratchet/: Cargo.toml
milnet-risk/: Cargo.toml
milnet-tss/: Cargo.toml
offline-jwt/: Cargo.toml
opaque/: Cargo.toml
orchestrator/: Cargo.toml
(+757 files in other folders)
