[workspace]
resolver = "2"
members = [
    "common",
    "crypto",
    "shard",
    "gateway",
    "orchestrator",
    "tss",
    "verifier",
    "opaque",
    "ratchet",
    "kt",
    "risk",
    "audit",
    "e2e",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"
hkdf = "0.12"
hmac = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
getrandom = "0.2"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
frost-ristretto255 = "2.2"
frost-core = "2.2"
opaque-ke = { version = "4.0", features = ["argon2", "ristretto255"] }
ml-dsa = "0.1.0-rc.7"
ml-kem = "0.2"
argon2 = "0.5"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = "0.13"
