[workspace]
resolver = "2"
members = [
    "common",
    "crypto",
    "shard",
    "gateway",
    "orchestrator",
    "tss",
    "verifier",
    "opaque",
    "ratchet",
    "kt",
    "risk",
    "audit",
    "e2e",
    "admin",
    "sso-protocol",
    "fido",
]
exclude = ["fuzz"]

[workspace.package]
# There is only ONE mode: production. is_production() always returns true.
# The 'production' Cargo feature is now DEFAULT-ENABLED in every crate.
# Production behavior is always active both at runtime and compile time.
# Build: cargo build --release
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"
hkdf = "0.12"
hmac = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
getrandom = "0.2"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
frost-ristretto255 = "2.2"
frost-core = "2.2"
opaque-ke = { version = "4.0", features = ["argon2", "ristretto255"] }
ml-dsa = "0.1.0-rc.7"
ml-kem = "0.2"
argon2 = "0.5"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std"] }
tokio-rustls = "0.26"
# SECURITY: rustls-pemfile is UNMAINTAINED (RUSTSEC-2025-0134).
# PEM parsing migrated to rustls-pki-types PemObject trait.
rustls-pki-types = { version = "1.14", features = ["std", "alloc"] }
rcgen = "0.13"
hex = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
libc = "0.2"
aegis = "0.6"
pbkdf2 = "0.12"
cryptoki = "0.12"
bs58 = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1", features = ["yaml"] }
serial_test = "3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
overflow-checks = true
