[package]
name = "admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
opaque = { path = "../opaque" }
risk = { path = "../risk" }
audit = { path = "../audit" }
kt = { path = "../kt" }
serde.workspace = true
serde_json = "1"
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
