[package]
name = "admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
opaque = { path = "../opaque" }
risk = { path = "../risk" }
audit = { path = "../audit" }
fido = { path = "../fido" }
kt = { path = "../kt" }
sso-protocol = { path = "../sso-protocol" }
serde.workspace = true
base64 = "0.22"
serde_json = "1"
tokio.workspace = true
uuid.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
opaque-ke.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hex.workspace = true
sqlx.workspace = true
