[package]
name = "audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
shard = { path = "../shard" }
sha2.workspace = true
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
serde_json = "1"
ml-dsa.workspace = true
getrandom.workspace = true
zeroize.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true

[dev-dependencies]
proptest = "1"
ctor = "0.2"
once_cell = "1"

[features]
default = ["production"]
production = ["common/production"]
test-support = []
