[package]
name = "authsrv"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "authsrv"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
sso-protocol = { path = "../sso-protocol" }
serde.workspace = true
serde_json = "1"
uuid.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2.workspace = true
getrandom.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = "0.5"

[features]
default = ["production"]
production = ["common/production", "sso-protocol/production"]
# Exposes test-only constructors (test_state, pkce_pair). Never enabled in
# release builds — `default` does not include it.
test-util = []
