[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
zeroize.workspace = true
subtle.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
getrandom.workspace = true
aes-gcm.workspace = true
aegis.workspace = true
hkdf.workspace = true
hmac.workspace = true
ml-dsa.workspace = true
blake3.workspace = true
tracing.workspace = true
hex.workspace = true
argon2.workspace = true
p256 = { workspace = true }
cryptoki = { workspace = true, optional = true }
serde_json = "1"
rand.workspace = true
base64 = "0.22"
rustls.workspace = true
libc.workspace = true
webpki-roots = "1.0"

[dev-dependencies]
insta.workspace = true
serde_json = "1"
proptest = "1"

[features]
production = []
test-support = []
cac = ["cryptoki"]
cac-hw = ["cac"]
