[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
zeroize.workspace = true
subtle.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
getrandom.workspace = true
aes-gcm.workspace = true
aegis.workspace = true
hkdf.workspace = true
hmac.workspace = true
ml-dsa.workspace = true
blake3.workspace = true
tracing.workspace = true
hex.workspace = true
argon2.workspace = true
p256 = { workspace = true }
ed25519-dalek = { workspace = true }
cryptoki = { workspace = true, optional = true }
serde_json = "1"
rand.workspace = true
curve25519-dalek.workspace = true
x25519-dalek.workspace = true
base64 = "0.22"
rustls.workspace = true
libc.workspace = true
webpki-roots = "1.0"
parking_lot = "0.12"

[dev-dependencies]
insta.workspace = true
serde_json = "1"
proptest = "1"
serial_test.workspace = true
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
toml = "0.8"

[features]
default = ["production"]
production = []
test-support = []
cac = ["cryptoki"]
cac-hw = ["cac"]
