[package]
name = "crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["hbs", "fips-kat"]
hbs = []
fips-kat = []
pkcs11-hw = ["dep:cryptoki"]
production = ["common/production"]

[dependencies]
common = { path = "../common" }
cryptoki = { workspace = true, optional = true }
serde.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
hkdf.workspace = true
hmac.workspace = true
subtle.workspace = true
zeroize.workspace = true
x25519-dalek.workspace = true
getrandom.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
frost-ristretto255.workspace = true
frost-core.workspace = true
ml-dsa.workspace = true
ml-kem.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
p256.workspace = true
libc.workspace = true
aegis.workspace = true
argon2.workspace = true
pbkdf2.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
postcard.workspace = true
bs58.workspace = true

[dev-dependencies]
hex = "0.4"
proptest = "1"
uuid.workspace = true
criterion.workspace = true
aes-gcm.workspace = true
sha2.workspace = true

[[bench]]
name = "crypto_bench"
harness = false
