[package]
name = "dudect-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rand.workspace = true

# Production crates under measurement. The dudect suite MUST call the real
# constant-time hot paths (not in-tree shims) for the Welch t-test to be
# meaningful, so these are regular dependencies of the `dudect_suite` binary.
crypto = { path = "../crypto" }
opaque = { path = "../opaque" }
sso-protocol = { path = "../sso-protocol" }
common = { path = "../common" }
uuid.workspace = true

[features]
default = []
