[package]
name = "e2e"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["production"]
load-tests = []
production = ["common/production"]

[dependencies]
common = { path = "../common", features = ["test-support"] }
crypto = { path = "../crypto" }
shard = { path = "../shard", features = ["test-internals"] }
gateway = { path = "../gateway" }
orchestrator = { path = "../orchestrator" }
opaque = { path = "../opaque" }
tss = { path = "../tss" }
verifier = { path = "../verifier" }
ratchet = { path = "../ratchet" }
audit = { path = "../audit", features = ["test-support"] }
kt = { path = "../kt" }
risk = { path = "../risk" }
tokio.workspace = true
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
frost-ristretto255.workspace = true
rand = "0.8"
hmac = "0.13"
sha2 = "0.10"
aes-gcm.workspace = true
hkdf.workspace = true
getrandom.workspace = true
fido = { path = "../fido" }
sso-protocol = { version = "0.1.0", path = "../sso-protocol" }
ml-dsa.workspace = true
serde_json = "1"
base64 = "0.22"
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
hex.workspace = true
ml-kem.workspace = true
serial_test.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
rustls-pki-types.workspace = true
libc.workspace = true
