[package]
name = "fido"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
serde.workspace = true
serde_json = "1"
uuid.workspace = true
sha2.workspace = true
zeroize.workspace = true
base64 = "0.22"
rand.workspace = true
p256 = { version = "0.13", features = ["ecdsa"] }
rsa.workspace = true
ed25519-dalek.workspace = true
signature = "2"
tracing.workspace = true
sqlx.workspace = true

[dev-dependencies]
serial_test.workspace = true

[features]
default = ["production"]
production = ["common/production"]
