[package]
name = "enterprise-sso-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
crypto = { path = "../crypto" }
shard = { path = "../shard" }
sso-protocol = { path = "../sso-protocol" }
common = { path = "../common" }
ratchet = { path = "../ratchet" }
opaque = { path = "../opaque" }
arbitrary = { version = "1", features = ["derive"] }

[features]
production = ["common/production"]

[[bin]]
name = "fuzz_shard_message"
path = "fuzz_targets/fuzz_shard_message.rs"
doc = false

[[bin]]
name = "fuzz_envelope_decrypt"
path = "fuzz_targets/fuzz_envelope_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_token_verify"
path = "fuzz_targets/fuzz_token_verify.rs"
doc = false

[[bin]]
name = "fuzz_pkce_verify"
path = "fuzz_targets/fuzz_pkce_verify.rs"
doc = false

[[bin]]
name = "fuzz_receipt_chain"
path = "fuzz_targets/fuzz_receipt_chain.rs"
doc = false

[[bin]]
name = "fuzz_ratchet_verify"
path = "fuzz_targets/fuzz_ratchet_verify.rs"
doc = false

[[bin]]
name = "fuzz_revocation"
path = "fuzz_targets/fuzz_revocation.rs"
doc = false

[[bin]]
name = "fuzz_saml_parse"
path = "fuzz_targets/fuzz_saml_parse.rs"
doc = false

[[bin]]
name = "fuzz_threshold_reconstruct"
path = "fuzz_targets/fuzz_threshold_reconstruct.rs"
doc = false

[[bin]]
name = "fuzz_xwing_decapsulate"
path = "fuzz_targets/fuzz_xwing_decapsulate.rs"
doc = false

[[bin]]
name = "fuzz_dpop_verify"
path = "fuzz_targets/fuzz_dpop_verify.rs"
doc = false

[[bin]]
name = "fuzz_ct_eq"
path = "fuzz_targets/fuzz_ct_eq.rs"
doc = false

[[bin]]
name = "fuzz_jwt_verify"
path = "fuzz_targets/fuzz_jwt_verify.rs"
doc = false

[[bin]]
name = "fuzz_opaque_login"
path = "fuzz_targets/fuzz_opaque_login.rs"
doc = false

[[bin]]
name = "fuzz_backup_restore"
path = "fuzz_targets/fuzz_backup_restore.rs"
doc = false
