[package]
name = "enterprise-sso-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
crypto = { path = "../crypto" }
shard = { path = "../shard" }
sso-protocol = { path = "../sso-protocol" }
common = { path = "../common" }
ratchet = { path = "../ratchet" }
opaque = { path = "../opaque" }
audit = { path = "../audit" }
fido = { path = "../fido" }
gateway = { path = "../gateway" }
arbitrary = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
sha2 = "0.10"

[features]
default = ["production"]
production = ["common/production"]

[[bin]]
name = "fuzz_shard_message"
path = "fuzz_targets/fuzz_shard_message.rs"
doc = false

[[bin]]
name = "fuzz_envelope_decrypt"
path = "fuzz_targets/fuzz_envelope_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_token_verify"
path = "fuzz_targets/fuzz_token_verify.rs"
doc = false

[[bin]]
name = "fuzz_pkce_verify"
path = "fuzz_targets/fuzz_pkce_verify.rs"
doc = false

[[bin]]
name = "fuzz_receipt_chain"
path = "fuzz_targets/fuzz_receipt_chain.rs"
doc = false

[[bin]]
name = "fuzz_ratchet_verify"
path = "fuzz_targets/fuzz_ratchet_verify.rs"
doc = false

[[bin]]
name = "fuzz_revocation"
path = "fuzz_targets/fuzz_revocation.rs"
doc = false

[[bin]]
name = "fuzz_saml_parse"
path = "fuzz_targets/fuzz_saml_parse.rs"
doc = false

[[bin]]
name = "fuzz_threshold_reconstruct"
path = "fuzz_targets/fuzz_threshold_reconstruct.rs"
doc = false

[[bin]]
name = "fuzz_xwing_decapsulate"
path = "fuzz_targets/fuzz_xwing_decapsulate.rs"
doc = false

[[bin]]
name = "fuzz_dpop_verify"
path = "fuzz_targets/fuzz_dpop_verify.rs"
doc = false

[[bin]]
name = "fuzz_ct_eq"
path = "fuzz_targets/fuzz_ct_eq.rs"
doc = false

[[bin]]
name = "fuzz_jwt_verify"
path = "fuzz_targets/fuzz_jwt_verify.rs"
doc = false

[[bin]]
name = "fuzz_opaque_login"
path = "fuzz_targets/fuzz_opaque_login.rs"
doc = false

[[bin]]
name = "fuzz_backup_restore"
path = "fuzz_targets/fuzz_backup_restore.rs"
doc = false

[[bin]]
name = "fuzz_fido2_auth"
path = "fuzz_targets/fuzz_fido2_auth.rs"
doc = false

[[bin]]
name = "fuzz_ml_dsa_verify"
path = "fuzz_targets/fuzz_ml_dsa_verify.rs"
doc = false

[[bin]]
name = "fuzz_slh_dsa_verify"
path = "fuzz_targets/fuzz_slh_dsa_verify.rs"
doc = false

[[bin]]
name = "fuzz_scim_parse"
path = "fuzz_targets/fuzz_scim_parse.rs"
doc = false

[[bin]]
name = "fuzz_raft_message"
path = "fuzz_targets/fuzz_raft_message.rs"
doc = false

[[bin]]
name = "fuzz_wire_protocol"
path = "fuzz_targets/fuzz_wire_protocol.rs"
doc = false

[[bin]]
name = "fuzz_jwe_decrypt"
path = "fuzz_targets/fuzz_jwe_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_opaque_register"
path = "fuzz_targets/fuzz_opaque_register.rs"
doc = false

[[bin]]
name = "fuzz_totp_validate"
path = "fuzz_targets/fuzz_totp_validate.rs"
doc = false

[[bin]]
name = "fuzz_raft_state"
path = "fuzz_targets/fuzz_raft_state.rs"
doc = false

[[bin]]
name = "fuzz_bft_append"
path = "fuzz_targets/fuzz_bft_append.rs"
doc = false

[[bin]]
name = "fuzz_totp"
path = "fuzz_targets/fuzz_totp.rs"
doc = false
