[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
shard = { path = "../shard" }
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
rand.workspace = true
rcgen.workspace = true
aes-gcm.workspace = true
getrandom.workspace = true
hex.workspace = true
zeroize.workspace = true
libc.workspace = true

[dev-dependencies]
serial_test.workspace = true

[features]
production = ["common/production"]
