[package]
name = "jit-access"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[features]
default = ["production"]
production = ["common/production"]
