[package]
name = "kerberos-pkinit"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
zeroize.workspace = true
hex.workspace = true
sha2.workspace = true

[features]
default = ["production"]
production = ["common/production"]
