[package]
name = "kt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
shard = { path = "../shard" }
sha2.workspace = true
sha3.workspace = true
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
hmac.workspace = true
hkdf.workspace = true
zeroize.workspace = true
getrandom.workspace = true
ml-dsa.workspace = true
aes-gcm.workspace = true

[features]
default = ["production"]
production = ["common/production"]
