[package]
name = "ldap-connector"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"], optional = true }

[features]
default = ["production"]
production = ["common/production"]
ldap-runtime = ["dep:ldap3"]
