[package]
name = "mdm-compliance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[features]
default = ["production"]
production = ["common/production"]
