[package]
name = "mfa-sms-push"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
tokio.workspace = true
base64 = "0.22"

[features]
default = ["production"]
production = ["common/production"]
